# zero-pass-backend

./: Cargo.toml  README.md
src/: encrypt.rs  error.rs  lib.rs  login_data.rs  methods.rs  tests.rs
src/encrypt/: base64.rs  mod.rs  vigenere.rs  xor.rs
zero_pass_backend_derive/: Cargo.toml
zero_pass_backend_derive/src/: lib.rs
