[workspace]
members = [
"zero_pass_backend_derive"
]

[package]
name = "zero_pass_backend"
version = "0.3.2"
authors = ["caio <wabros@proton.me>"]
license = "GPL-3.0"
description = "The Zero Pass Project brain"
homepage = "https://gitlab.com/zero-pass/zero-pass-backend"
repository = "https://github.com/CaioVieiraF/zero-pass-backend"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features=["derive"] , optional = true }
serde_json = "1"
base64 = "0.21"
thiserror = "1.0.50"
zero_pass_backend_derive = { path = "./zero_pass_backend_derive", version = "0.1.2" }
async-trait = "0.1.79"

[features]
serde = ["dep:serde"]

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt", "macros"] }
