[package]
name = "zero_pass_backend"
version = "0.4.0"
authors = ["caio <wabros@proton.me>"]
license = "GPL-3.0"
description = "The Zero Pass Project brain"
homepage = "https://gitlab.com/zero-pass/zero-pass-backend"
repository = "https://github.com/CaioVieiraF/zero-pass-backend"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
digest = { version = "0.10.7" }
base64ct = { version = "1.6.0", features = ["alloc"] }
sha3 = "0.10.8"
sha2 = "0.10.8"
sha1 = "0.10.6"
md-5 = "0.10.6"

[features]
builtins = []

